syntax = "proto3";

package api.v1;

import "google/protobuf/timestamp.proto";

service Logs {
  rpc StreamLogs(StreamLogsRequest) returns (StreamLogsResponse) {}
  rpc UploadLogs(UploadLogsRequest) returns (UploadLogsResponse) {}
}

message StreamLogsRequest {
  string run_id = 1;
  string content = 2;
}

message StreamLogsResponse {
  bool success = 1;
}

message UploadLogsRequest {
  string run_id = 1;
  string content = 2;
}

message UploadLogsResponse {
  bool success = 1;
}